# mdf

./: README.md  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
api/api/: __init__.py
api/api/routes/: extractor.py
api/core/: __init__.py  config.py  sync.py
api/schemas/: __init__.py  endpoints.py  parser.py
api/services/: __init__.py  llm_router.py  mdf_agent.py  pdf_extractor.py
api/tests/: test_integration_api.py  test_mdf_agent.py  test_pdf_extractor.py  test_schemas.py
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css  types.ts  utils.ts
web/src/components/: CostDashboard.tsx  ExtractionResults.tsx  FilePreview.tsx  ModelPicker.tsx  ProviderHealth.tsx  Shell.tsx  UploadForm.tsx
